==> land-soyu/Mates/Farmking/source/Cow_Sensor/Src/sx1276.c <==
#define _SX1276_C_
#include <string.h>
#include "em_cmu.h"
#include "em_gpio.h"
#include "em_common.h"
#include "bspconfig.h"
#include "sx1276.h"
#include "api.h"
#include <stdio.h>
#include "SEGGER_RTT.h"
#define	RTT_PRINTF(...)	\
	do	{	\
					char	str[512];\
					sprintf(str,	__VA_ARGS__);\
					SEGGER_RTT_WriteString(0,	str);\
					}	while(0)
#define	printf	RTT_PRINTF
#define LORA_FREQ (923300000)//923.3Mhz

void SX1276Init()
{
  USART_InitSync_TypeDef initSync = USART_INITSYNC_DEFAULT;
	uint32_t SetFrequency = LORA_FREQ;

	CMU_ClockEnable( cmuClock_GPIO, true );
	CMU_ClockEnable( RF_SPI_CLK, true );

#ifdef USE_RF_PWR_SWITCH
	GPIO_PinModeSet(RF_PWR_GPIO_Port,RF_PWR_Pin,gpioModePushPull, 1);		// LoRa Power on
#endif
	GPIO_PinModeSet(RF_NRESET_GPIO_Port, RF_NRESET_Pin, gpioModePushPull, 1);
	HAL_Delay(10);

  // Configure USART for synchronous mode
	initSync.msbf     = true;
  initSync.baudrate = RF_SPI_BAUDRATE;
  USART_InitSync(RF_SPI_USART, &initSync);

  // Route USART clock to display clock and USART TX to display SI
  RF_SPI_USART->ROUTEPEN = USART_ROUTEPEN_RXPEN | USART_ROUTEPEN_TXPEN | USART_ROUTEPEN_CLKPEN;
  RF_SPI_USART->ROUTELOC0 = RF_SPI_USART_LOCATION_TX | RF_SPI_USART_LOCATION_RX
													| RF_SPI_USART_LOCATION_SCLK;

  // Set GPIO config to master for SPI communication
	GPIO_PinModeSet(RF_MOSI_GPIO_Port,RF_MOSI_Pin,gpioModePushPull, 1);
	GPIO_PinModeSet(RF_MISO_GPIO_Port,RF_MISO_Pin,gpioModeInput,    0);
	GPIO_PinModeSet(RF_SCK_GPIO_Port, RF_SCK_Pin, gpioModePushPull, 1);
	GPIO_PinModeSet(RF_NSS_GPIO_Port, RF_NSS_Pin, gpioModePushPull, 1);

	GPIO_PinModeSet(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin, gpioModePushPull, 0);
	GPIO_PinModeSet(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin, gpioModePushPull, 0);

	GPIO_PinModeSet(DIO0_GPIO_Port, DIO0_Pin,gpioModeInput, 0);
	GPIO_PinModeSet(DIO1_GPIO_Port, DIO1_Pin,gpioModeInput, 0);
	GPIO_PinModeSet(DIO2_GPIO_Port, DIO2_Pin,gpioModeInput, 0);
	GPIO_PinModeSet(DIO3_GPIO_Port, DIO3_Pin,gpioModeInput, 0);
	GPIO_PinModeSet(DIO4_GPIO_Port, DIO4_Pin,gpioModeInput, 0);
	GPIO_PinModeSet(DIO5_GPIO_Port, DIO5_Pin,gpioModeInput, 0);


	SX1276->Reset();

	SX1276SetOpMode(RFLR_OPMODE_SLEEP);
	
	//For Band Specific Additional Registers 
	if( SetFrequency > RF_MID_BAND_THRESH ){ SX1276RegLora->RegOpMode = RFLR_OPMODE_LONGRANGEMODE_ON|RFLR_OPMODE_FREQMODE_ACCESS_LF; }
	else { SX1276RegLora->RegOpMode = RFLR_OPMODE_LONGRANGEMODE_ON|RFLR_OPMODE_FREQMODE_ACCESS_HF; }
	SX1276Write(REG_LR_OPMODE, SX1276RegLora->RegOpMode);

	//Default Explicit Mode ( Header 포함)?
	//정보의 바이트 수(NbByte),coding rate(최대 4/8),CRC가 포함되어 있음
	
	SX1276SetOpMode(RFLR_OPMODE_STANDBY);
	SX1276SetFreq(SetFrequency);
	SX1276SetTxPower(15);
	SX1276SetBandWidth(125);
	SX1276SetHeader(0);
	SX1276SetCodingRate(1);
	SX1276SetSpreadingFactor(7);
	SX1276SetCrc(1);
	SX1276SetSymbTimeout(0x3FF);
	SX1276SetPayloadMaxLength(0xFF);
	SX1276SetPayloadLength(0xFF);
	SX1276SetLowDatarateOptimize(1);
	//	SX1276->StartRx();
}

void SX1276Process(void)
{
	uint8_t DIO0 = 0;
	switch(SX1276->State)
	{
		case STATE_IDLE:
			break;
		case STATE_TX_RUNNING:
			DIO0 = GPIO_PinInGet(DIO0_GPIO_Port,DIO0_Pin);
			if( DIO0 == 1 ) // TxDone
			{
				// Clear Irq
				SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_TXDONE );
				SX1276->State = STATE_TX_DONE;   
			}
			break;
		case STATE_TX_DONE:
			SX1276->StartRx();
			break;
		case STATE_RX_RUNNING:
			DIO0 = GPIO_PinInGet(DIO0_GPIO_Port,DIO0_Pin);
			if( DIO0 == 1 ) // RxDone
      		{
						// Clear Irq
						SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_RXDONE  );
						SX1276->State = STATE_RX_DONE;
      		}
			break;
		case STATE_RX_DONE:
			SX1276RegLora->RegIrqFlags = SX1276Read( REG_LR_IRQFLAGS );
			//testReult = SX1276Read(REG_LR_HOPCHANNEL);
			if( ( SX1276RegLora->RegIrqFlags & RFLR_IRQFLAGS_PAYLOADCRCERROR ) == RFLR_IRQFLAGS_PAYLOADCRCERROR )
			{
				// Clear Irq
				SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_PAYLOADCRCERROR  );
			}
			else
			{
				SX1276RegLora->RegNbRxBytes = SX1276Read( REG_LR_RXNBBYTES );
				SX1276ReadFifo( SX1276->RxBuf, SX1276RegLora->RegNbRxBytes );
				#if 0
				uint16_t i;
				for(i=0;i<SX1276RegLora->RegNbRxBytes;i++)
				{
						Uart1_PutChar(SX1276->RxBuf[i]); // 무조건 로라 데이터 수신시 Uart로 전송한다. 
														// 만약에 데이터를 버퍼에 집어 넣고 버퍼 데이터를 처리하는 도중에 SX1276 RX 이벤트가 발생하고
													   // RX된 데이터가 버퍼를 덮어 첼李?되면 데이터가 손실되는 경우가 잇음
													  // 아니면 버퍼에 집어 넣고 다 처리 햇을 경우에만 SX1276->StartRx();를 실행하면 안전함
						//Lora_RxProcess(SX1276->RxBuf[i]);
				}
				#endif
				//수신받은 데이터를 옮겨 담을 코드가 필요함 
			}
			SX1276->StartRx();
	        break;
		default:
			break;
	}
}

void SX1276Reset(void)
{
	GPIO_PinOutClear(RF_NRESET_GPIO_Port, RF_NRESET_Pin);
	HAL_Delay(1);
	GPIO_PinOutSet(RF_NRESET_GPIO_Port, RF_NRESET_Pin);
	HAL_Delay(6);
}

void SX1276SetOpMode(uint8_t OpMode)
{
	if ((OpMode == RFLR_OPMODE_TRANSMITTER) || (OpMode == RFLR_OPMODE_SYNTHESIZER_TX))
	{
	//	printf("TX Running..\r\n");
		GPIO_PinOutClear(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin);
		GPIO_PinOutSet(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin); // tx mode
		//GPIO_PinOutSet(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin);
		//GPIO_PinOutClear(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin); // tx mode
		//GPIO_PinOutSet(RF_RXTX_GPIO_Port, RF_RXTX_Pin);
	}
	else if ((OpMode == RFLR_OPMODE_SYNTHESIZER_RX) || (OpMode == RFLR_OPMODE_RECEIVER))
	{
	//	printf("RX Running..\r\n");
		GPIO_PinOutSet(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin);
		GPIO_PinOutClear(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin); // rx mode 
		//GPIO_PinOutClear(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin);
		//GPIO_PinOutSet(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin); // rx mode 
		//GPIO_PinOutClear(RF_RXTX_GPIO_Port, RF_RXTX_Pin);
	}
	else if(OpMode == RFLR_OPMODE_SLEEP)
	{
		GPIO_PinOutClear(RF_SWITCH_V1_GPIO_Port, RF_SWITCH_V1_Pin);
		GPIO_PinOutClear(RF_SWITCH_V2_GPIO_Port, RF_SWITCH_V2_Pin);
	}
	SX1276Write(REG_LR_OPMODE, (SX1276Read(REG_LR_OPMODE) & RFLR_OPMODE_MASK) | OpMode);
}

void SX1276WriteBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
	uint8_t i;
	GPIO_PinOutClear(RF_NSS_GPIO_Port, RF_NSS_Pin);
	addr = addr|0x80;
	USART_SpiTransfer(RF_SPI_USART, addr);
	for( i = 0; i < size; i++ )
	{
			USART_SpiTransfer(RF_SPI_USART, buffer[i]);
	}
	GPIO_PinOutSet(RF_NSS_GPIO_Port, RF_NSS_Pin);
}

void SX1276ReadBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
	uint8_t i;
	GPIO_PinOutClear(RF_NSS_GPIO_Port, RF_NSS_Pin);
	addr = addr & 0x7F;
	USART_SpiTransfer(RF_SPI_USART, addr);
	for( i = 0; i < size; i++ )
	{
		buffer[i] = USART_SpiTransfer(RF_SPI_USART, 0xff);
	}
	GPIO_PinOutSet(RF_NSS_GPIO_Port, RF_NSS_Pin);
}
