==> land-soyu/Mates/Farmking/COW-1/Cow_Ap/Src/sx1276.c <==
#define _SX1276_C_
#include <string.h>
#include "stm32l1xx_hal.h"
#include "sx1276.h"
#include <stdint.h>
#include "uart1.h"
#define LORA_FREQ (923300000)//923.3Mhz

void SX1276Init()
{
	uint32_t SetFrequency = LORA_FREQ;
	HAL_GPIO_WritePin(RF_NSS_GPIO_Port, RF_NSS_Pin, GPIO_PIN_SET);
	SX1276->Reset();
	
	SX1276SetOpMode(RFLR_OPMODE_SLEEP);
	
	//For Band Specific Additional Registers 
	if( SetFrequency > RF_MID_BAND_THRESH ){ SX1276RegLora->RegOpMode = RFLR_OPMODE_LONGRANGEMODE_ON|RFLR_OPMODE_FREQMODE_ACCESS_LF; }
	else { SX1276RegLora->RegOpMode = RFLR_OPMODE_LONGRANGEMODE_ON|RFLR_OPMODE_FREQMODE_ACCESS_HF; }
	SX1276Write(REG_LR_OPMODE, SX1276RegLora->RegOpMode);

	//Default Explicit Mode ( Header 포함)?
	//정보의 바이트 수(NbByte),coding rate(최대 4/8),CRC가 포함되어 있음

	
	SX1276SetOpMode(RFLR_OPMODE_STANDBY);
	SX1276SetFreq(SetFrequency);
	SX1276SetTxPower(15);
	SX1276SetBandWidth(125);
	SX1276SetHeader(0);
	SX1276SetCodingRate(1);
	SX1276SetSpreadingFactor(7);
	SX1276SetCrc(1);
	SX1276SetSymbTimeout(0x3FF);
	SX1276SetPayloadMaxLength(0xFF);
	SX1276SetPayloadLength(0xFF);
	SX1276SetLowDatarateOptimize(1);
	SX1276->StartRx();
	

	
}

void SX1276Process(void)
{
	uint8_t DIO0 = 0;
	switch(SX1276->State)
	{
		case STATE_IDLE:
			break;
		case STATE_TX_RUNNING:
			DIO0 = HAL_GPIO_ReadPin(DIO0_GPIO_Port,DIO0_Pin);
			if( DIO0 == 1 ) // TxDone
			{
				// Clear Irq
           		 SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_TXDONE );
           		 SX1276->State = STATE_TX_DONE;   
			}
			break;
		case STATE_TX_DONE:
			SX1276->StartRx();
			break;
		case STATE_RX_RUNNING:
			DIO0 = HAL_GPIO_ReadPin(DIO0_GPIO_Port,DIO0_Pin);
			if( DIO0 == 1 ) // RxDone
      		{
	            // Clear Irq
	            SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_RXDONE  );
	            SX1276->State = STATE_RX_DONE;
      		}
			break;
		case STATE_RX_DONE:
			SX1276RegLora->RegIrqFlags = SX1276Read( REG_LR_IRQFLAGS );
			//testReult = SX1276Read(REG_LR_HOPCHANNEL);
			if( ( SX1276RegLora->RegIrqFlags & RFLR_IRQFLAGS_PAYLOADCRCERROR ) == RFLR_IRQFLAGS_PAYLOADCRCERROR )
			{
				// Clear Irq
       			 SX1276Write( REG_LR_IRQFLAGS, RFLR_IRQFLAGS_PAYLOADCRCERROR  );
			}
			else
			{
				SX1276RegLora->RegNbRxBytes = SX1276Read( REG_LR_RXNBBYTES );
				SX1276ReadFifo( SX1276->RxBuf, SX1276RegLora->RegNbRxBytes );
				uint16_t i;
				#if 0
				for(i=0;i<SX1276RegLora->RegNbRxBytes;i++)
				{
						Uart1_PutChar(SX1276->RxBuf[i]); // 무조건 로라 데이터 수신시 Uart로 전송한다. 
														// 만약에 데이터를 버퍼에 집어 넣고 버퍼 데이터를 처리하는 도중에 SX1276 RX 이벤트가 발생하고
													   // RX된 데이터가 버퍼를 덮어 싀우게 되면 데이터가 손실되는 경우가 잇음
													  // 아니면 버퍼에 집어 넣고 다 처리 햇을 경우에만 SX1276->StartRx();를 실행하면 안전함
						//Lora_RxProcess(SX1276->RxBuf[i]);
				}
				#endif
				//수신받은 데이터를 옮겨 담을 코드가 필요함 
			}
			SX1276->StartRx();
	        break;
		default:
			break;
	}
}

void SX1276Reset(void)
{
	HAL_GPIO_WritePin(RF_NRESET_GPIO_Port, RF_NRESET_Pin, GPIO_PIN_RESET);
	HAL_Delay(1);
	HAL_GPIO_WritePin(RF_NRESET_GPIO_Port, RF_NRESET_Pin, GPIO_PIN_SET);
	HAL_Delay(6);
}

void SX1276SetOpMode(uint8_t OpMode)
{
	if ((OpMode == RFLR_OPMODE_TRANSMITTER) || (OpMode == RFLR_OPMODE_SYNTHESIZER_TX))
	{
	//	printf("TX Running..\r\n");
		HAL_GPIO_WritePin(RF_SWITCH_GPIO_Port, RF_SWITCH_Pin, GPIO_PIN_RESET); // tx mode
		//HAL_GPIO_WritePin(RF_RXTX_GPIO_Port, RF_RXTX_Pin, GPIO_PIN_SET);
	}
	else if ((OpMode == RFLR_OPMODE_SYNTHESIZER_RX) || (OpMode == RFLR_OPMODE_RECEIVER))
	{
	//	printf("RX Running..\r\n");
		HAL_GPIO_WritePin(RF_SWITCH_GPIO_Port, RF_SWITCH_Pin, GPIO_PIN_SET); // rx mode 
		//HAL_GPIO_WritePin(RF_RXTX_GPIO_Port, RF_RXTX_Pin, GPIO_PIN_RESET);
	}
	SX1276Write(REG_LR_OPMODE, (SX1276Read(REG_LR_OPMODE) & RFLR_OPMODE_MASK) | OpMode);
}

void SX1276WriteBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
	uint8_t i;
	HAL_GPIO_WritePin(RF_NSS_GPIO_Port, RF_NSS_Pin, GPIO_PIN_RESET);
	HAL_Delay(1);
	addr = addr|0x80;
	SX1276SpiOut(addr);
    for( i = 0; i < size; i++ )
    {
        SX1276SpiOut( buffer[i] );
    }
	HAL_Delay(1);
	HAL_GPIO_WritePin(RF_NSS_GPIO_Port, RF_NSS_Pin, GPIO_PIN_SET);
}

void SX1276ReadBuffer( uint8_t addr, uint8_t *buffer, uint8_t size )
{
    uint8_t i;
	HAL_GPIO_WritePin(RF_NSS_GPIO_Port, RF_NSS_Pin, GPIO_PIN_RESET);
	HAL_Delay(1);
	addr = addr & 0x7F;
	SX1276SpiOut(addr);
	for( i = 0; i < size; i++ )
	{
		SX1276SpiIn( &buffer[i] );
	}
	HAL_Delay(1);
	HAL_GPIO_WritePin(RF_NSS_GPIO_Port, RF_NSS_Pin, GPIO_PIN_SET);
}
